// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<tr
  class="rmd-tr rmd-tr--bordered rmd-tr--hoverable"
  data-testid="row"
>
  <td
    class="rmd-table-cell rmd-table-cell--no-wrap rmd-align-left"
  >
    Content
  </td>
</tr>
`;

exports[`TableRow should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<tr
  class="rmd-tr rmd-tr--bordered rmd-tr--hoverable custom-class-name"
  data-testid="row"
  style="cursor: pointer;"
>
  <td
    class="rmd-table-cell rmd-table-cell--no-wrap rmd-align-left"
  >
    Content
  </td>
</tr>
`;

exports[`TableRow should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<tr
  class="rmd-tr rmd-tr--bordered rmd-tr--hoverable"
  data-testid="row"
  style=""
>
  <td
    class="rmd-table-cell rmd-table-cell--no-wrap rmd-align-left"
  >
    Content
  </td>
</tr>
`;

exports[`TableRow should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<tr
  class="rmd-tr"
  data-testid="row"
  style=""
>
  <td
    class="rmd-table-cell rmd-table-cell--no-wrap rmd-align-left"
  >
    Content
  </td>
</tr>
`;
